src/test/resources/functionly/bad/semantic/bad1.fly
public function bad1(a, b)
begin
  return a + c;
end